Minor vertical spacing fixes

--- a/src/sass/utils/forms.scss
+++ b/src/sass/utils/forms.scss
@@ -13,7 +13,7 @@
 }
 
 .form-section {
-    margin-bottom: 28px !important;
+    margin-bottom: 16px !important;
     &:not(:first-of-type) {
         margin-top: 0 !important;
     }
